feat: jwt authorization
